# quipu

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  INFORME_PREAUDITORIA.txt  LICENSE-COMMERCIAL  LICENSING.md  MODELO_DE_AMENAZA.txt  PENDIENTES.txt  QUIPU_PROYECTO_Y_REQUISITOS.txt  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: quipu.h
bindings/c/src/: lib.rs
bindings/c/tests/: roundtrip.c
bindings/go/: README.md  errors.go  go.mod  interop_test.go  oprf.go  oprf_e2e_test.go  oprf_test.go  quipu.go  quipu_test.go
bindings/go/cmd/oprf-client/: main.go
bindings/node/: .gitignore  README.md  index.d.ts  package-lock.json  package.json
bindings/node/examples/: oprf-client.mjs
bindings/node/scripts/: build-native.mjs
bindings/node/src/: call.js  errors.js  index.js  memory.js  native.js
bindings/node/test/: errors.test.mjs  interop.test.mjs  oprf.test.mjs  roundtrip.test.mjs
crates/quipu-cnsa/: Cargo.toml  README.md
crates/quipu-cnsa/src/: api.rs  cipher.rs  dictionary.rs  kdf.rs  lib.rs
crates/quipu-nucleo/: Cargo.toml  README.md
crates/quipu-nucleo/src/: container.rs  dictionary.rs  lib.rs  render.rs
crates/quipu-nucleo/tests/: glifos_degradados.rs  glifos_separabilidad.rs
crates/quipu-oprf-server/: Cargo.toml  README.md
crates/quipu-oprf-server/deploy/: nginx.conf.example  quipu-oprf-server.service
crates/quipu-oprf-server/examples/: client.rs
crates/quipu-oprf-server/src/: client.rs  hexutil.rs  http.rs  keys.rs  lib.rs  main.rs  plans.rs  ratelimit.rs  store.rs
crates/quipu-oprf-server/tests/: e2e.rs
crates/quipu-voprf/: Cargo.toml  README.md  pyproject.toml
crates/quipu-voprf/src/: lib.rs  rfc9497.rs
crates/quipu-voprf/tests/: rfc9497_vectors.rs
docs/: ATAQUES_TAXONOMIA.md  CNSA.md  EXPORT.md  ML.md  PRE_AUDIT.md  RELEASES.md  SPEC.md  THREAT_MODEL.md  announcement.es.md  announcement.md  quipu-oprf-server-plan.md  social_posts.md
docs/superpowers/plans/: 2026-07-01-quipu-security-lab-stage-a.md  2026-07-01-quipu-security-lab-stage-b.md  2026-07-02-quipu-phase0-credibility.md  2026-07-03-quipu-phase1-slh-triple-hybrid.md  2026-07-04-quipu-streaming-aead.md  2026-07-05-c-abi-bindings.md  2026-07-05-go-bindings.md  2026-07-05-node-bindings.md
docs/superpowers/specs/: 2026-07-01-quipu-security-lab-design.md  2026-07-02-quipu-surpass-military-roadmap-design.md  2026-07-03-quipu-phase1-slh-triple-hybrid-design.md  2026-07-04-quipu-streaming-aead-design.md  2026-07-05-c-abi-bindings-design.md  2026-07-05-go-bindings-design.md  2026-07-05-node-bindings-design.md
examples/: demo.rs  gen_vectors.rs  glyph_native_demo.rs  hackerbot.rs  oprf_client.py  oprf_server.rs  quickstart.py  quickstart.rs  redteam.rs  securitylab.rs  securitylab_offline.rs  selftest_soak.rs  testplatform.rs  v2demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: codec_roundtrip.rs  honey_decrypt.rs  parse_container.rs  unpad.rs
herramientas/: probar_verificar.py  verificar.py
integrations/django/: README.md  pyproject.toml
integrations/django/quipu_oprf_django/: __init__.py  client.py  hashers.py
integrations/django/tests/: conftest.py  test_client.py  test_hashers.py
integrations/express/: README.md  package.json
integrations/express/examples/: app.mjs
integrations/express/src/: index.js
integrations/express/test/: hasher.test.mjs
integrations/go/: README.md  go.mod  oprfhash.go  oprfhash_test.go
integrations/go/examples/: server.go
lab/: Dockerfile  README.md  run.sh
proptest-regressions/: prelayers.txt
scripts/: audit.sh  glyph_generative.py  glyph_pipeline.py  oprf-e2e.sh
src/: aleatorio.rs  antihacker.rs  api.rs  cipher.rs  codec.rs  container.rs  dictionaries.rs  dictionary.rs  ecc.rs  firmante.rs  glyphfont.rs  glyphopt.rs  glyphscan.rs  hackerbot.rs  honey.rs  kdf.rs  lib.rs  netlimit.rs  oprf.rs  oprf_net.rs  pqhybrid.rs  pqsign.rs  prelayers.rs  python.rs  render.rs  selftest.rs  shamir.rs  stream.rs  voprf.rs
src/firmante/: mod.rs  pkcs11.rs
src/lab/: corpus.rs  distinguidor.rs  engine.rs  forge.rs  forge_triple.rs  guard.rs  guessing.rs  honey_attack.rs  honey_fuzz.rs  leak.rs  mod.rs  stream_attack.rs  timing.rs
supply-chain/: config.toml
tests/: glifos_degradados.rs  glifos_separabilidad.rs  honey_distinguibilidad.rs  hsm_pkcs11.rs  vectors.rs  wycheproof_aead.rs
tests/python/: test_quipu.py
tests/vectors/: quipu_vectors.json
