[workspace]
members = [".", "bindings/c", "crates/quipu-voprf", "crates/quipu-oprf-server"]
resolver = "2"

[package]
name = "quipu"
version = "0.8.0"
edition = "2024"
description = "Codec criptográfico post-cuántico híbrido con endurecimiento online verificable (VOPRF) y canal visual de glifos."
authors = ["Juan Carlos Isaza Arenas <isazajuancarlos@gmail.com>"]
license = "AGPL-3.0-or-later"
keywords = ["cryptography", "post-quantum", "encoding", "oprf", "aead"]
categories = ["cryptography"]
readme = "README.md"
repository = "https://github.com/isazajuancarlos/quipu"
homepage = "https://github.com/isazajuancarlos/quipu"
documentation = "https://docs.rs/quipu"
# No publicar en el crate los borradores internos de planificación/financiación.
exclude = [
    "GRANT_NLNET.md",
    "OTF_RED_TEAM_LAB.md",
    "PENDIENTES.txt",
    "QUIPU_PROYECTO_Y_REQUISITOS.txt",
    "conversaciones/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3"]
# Laboratorio de seguridad (red-team adaptativo). NUNCA se activa en release ni
# en la rueda de PyPI: el arma no viaja con el producto.
lab = []
# Banco OFFLINE pesado/ruidoso (timing, guessing). Implica `lab`. NO lo corre el
# job de CI (que usa --features lab); vive dentro del contenedor quipu-lab.
lab-offline = ["lab"]
# Firma triple-híbrida de alta garantía (Ed25519 + ML-DSA-87 + SLH-DSA).
# NO-default: la firma pesa ~34 KB y no debe compilarse siempre.
slh = ["dep:fips205"]
# Honey Encryption: modo con SEÑUELOS para secretos de baja entropía (PIN,
# frases mnemónicas). Opt-in y SIN autenticación por diseño (un tag sería un
# oráculo de éxito); no es sustituto del núcleo AEAD. Ver `src/honey.rs`.
honey = []
# Custodia de claves por umbral (Shamir k-de-n). NO-default: es una
# herramienta de ESCROW, no del núcleo de cifrado. Aislada tras su propio
# gate para que quien no la necesite no la lleve compilada — menos
# superficie expuesta, y ninguna interferencia posible con el resto.
escrow = []
# Inyección de fallo en las autopruebas. SOLO para ejercitar el camino de error
# de punta a punta en CI. Nunca en un build publicado: haría que la librería se
# negara a operar siempre.
selftest-fault = []

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"], optional = true }
num-bigint = "0.5"
num-traits = "0.2"
chacha20poly1305 = "0.11"
# Arrastra `rand_core` 0.6 al arbol, y NO se puede evitar: `hash_password_into`
# —lo unico que Quipu llama— exige la feature `alloc`, que exige `password-hash`,
# que trae `rand_core` por defecto. Soltarla obligaria a gestionar a mano el
# bloque de 64 MiB de Argon2 en la ruta de derivacion de claves, y no compensa:
# esa `rand_core` solo sirve para que argon2 genere sales por su cuenta, cosa
# que aqui nunca ocurre —el salt sale de `aleatorio`—. Enlazada, no ejecutada.
argon2 = "0.5"
hkdf = "0.13"
sha2 = "0.11"
unicode-normalization = "0.1"
getrandom = { version = "0.4", features = ["std"] }
zeroize = "1"
subtle = "2"
ml-kem = "0.3"
ml-dsa = "0.1.1"
ed25519-dalek = "3"
x25519-dalek = { version = "3", features = ["static_secrets"] }
rand_core = "0.10"
# Expande una semilla del sistema en el flujo que exigen los traits
# INFALIBLES de rand_core. La alternativa era escribir ese pegamento a mano
# sobre `chacha20` —quince lineas de criptografia propia— y `stream.rs` ya
# fija la regla: no se inventan primitivas. Ver `aleatorio.rs`.
rand_chacha = "0.10"
curve25519-dalek = { version = "5", features = ["digest"] }
# Primitivas VOPRF, en su propio crate Apache-2.0: es lo unico que un cliente
# del servicio OPRF debe enlazar, y no puede arrastrar esta AGPL. Apache fluye
# hacia AGPL, asi que el nucleo puede usarlo sin friccion.
quipu-voprf = { version = "0.2.1", path = "crates/quipu-voprf" }
image = { version = "0.25", default-features = false, features = ["png"] }
reed-solomon = "0.2"
fips205 = { version = "0.4.1", optional = true, default-features = false, features = ["slh_dsa_sha2_256s", "default-rng"] }

[dev-dependencies]
proptest = "1"
wycheproof = "0.6"
# Solo para leer/generar los vectores de interoperabilidad (tests/vectors/).
# Ya está en el árbol vía wycheproof y exento en cargo-vet.
serde_json = "1"

[[example]]
name = "securitylab"
required-features = ["lab"]

[[example]]
name = "securitylab_offline"
required-features = ["lab-offline"]

[[example]]
name = "redteam"
required-features = ["lab"]

[[example]]
name = "gen_vectors"
required-features = ["honey"]

# --- Endurecimiento del binario / ruedas (Capa 5) ---
# overflow-checks: mantiene la comprobación de overflow de enteros EN RELEASE
#   — defensa en profundidad para una lib que parsea entrada no confiable
#   (longitudes/índices); evita wraparound silencioso. Coste de perf mínimo.
# strip: quita símbolos de ruedas/binarios (menos info para un atacante, menor
#   tamaño). NO se usa panic="abort": el Security Lab usa catch_unwind (honey_fuzz).
[profile.release]
overflow-checks = true
strip = "symbols"
