[package]
name = "quipu-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.quipu]
path = ".."

[[bin]]
name = "parse_container"
path = "fuzz_targets/parse_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unpad"
path = "fuzz_targets/unpad.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_roundtrip"
path = "fuzz_targets/codec_roundtrip.rs"
test = false
doc = false
bench = false
