# Servidor de producción del endurecimiento OPRF/VOPRF de Quipu.
# Plano de datos: expone la primitiva `voprf::Server` como API autenticada y
# medida. NO se publica en crates.io (es el servicio, no la librería).
# Ver docs/quipu-oprf-server-plan.md.
[package]
name = "quipu-oprf-server"
version = "0.1.0"
edition = "2024"
authors = ["Juan Carlos Isaza Arenas <isazajuancarlos@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "Servidor OPRF/VOPRF autenticado y medido para Quipu."
repository = "https://github.com/isazajuancarlos/quipu"
publish = false

[dependencies]
# El servidor comparte la MISMA primitiva que el cliente.
quipu = { path = "../.." }
# `default-features = false` a propósito: la 0.40 activa por defecto
# `ffi-sqlite-wasm-rs`, un backend para wasm32 que arrastra wasm-bindgen, js-sys
# y bumpalo. Está acotado por target y aquí nunca se compila, pero SÍ entra al
# lock y a la superficie que audita cargo-vet. El servidor corre en un VPS
# Linux: no se firma lo que no se usa. `cache` sí se conserva (sentencias
# preparadas, que es lo que el bucle de verificación de API keys ejercita).
rusqlite = { version = "0.40", default-features = false, features = ["bundled", "cache"] }
tiny_http = "0.12"
sha2 = "0.10"
subtle = "2"
# Misma línea que el núcleo y que quipu-voprf: una sola `getrandom` en el árbol.
# La 0.4 renombró `getrandom()` a `fill()`.
getrandom = "0.4"

[dev-dependencies]
# El test de integración construye una `voprf::Server` y verifica el resultado
# de forma independiente. (quipu ya es dependencia normal; se repite aquí para
# que el crate de test de integración lo tenga en su ámbito.)
quipu = { path = "../.." }

[[example]]
name = "client"
path = "examples/client.rs"
