[package]
name = "quipu-voprf"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Cliente y servidor VOPRF sobre ristretto255 con pruebas DLEQ. Primitivas del servicio Quipu OPRF."
repository = "https://github.com/isazajuancarlos/quipu"
readme = "README.md"
keywords = ["voprf", "oprf", "ristretto255", "dleq", "cryptography"]
categories = ["cryptography"]

# APACHE-2.0 A PROPOSITO, distinto del nucleo (AGPL-3.0-or-later).
#
# Este crate es lo UNICO que un cliente del servicio Quipu OPRF debe enlazar en
# su servidor de autenticacion. Si arrastrara la AGPL del nucleo, el copyleft de
# red alcanzaria al SaaS del cliente: nadie enchufa eso a su auth, y el servicio
# de pago no se vende. Poner Apache solo en el SDK no bastaba -- la licencia de
# un envoltorio no relicencia su dependencia; habia que separar el codigo.
#
# Lo que se cede son ~270 lineas de matematica de curva estandar (cegar,
# finalizar, verificar DLEQ). No es el foso: el foso son el servidor, la clave k
# y la biblioteca post-cuantica completa, que siguen AGPL. Apache y no MIT por la
# concesion expresa de patentes, que es lo que revisa el legal de una empresa.
license = "Apache-2.0"

[lib]
# cdylib para la rueda de Python (maturin); rlib para que el nucleo lo enlace.
crate-type = ["cdylib", "rlib"]
name = "quipu_voprf"

[features]
# Modulo de Python `quipu_voprf`, publicado APARTE de `quipu-crypto` (AGPL).
# Un cliente del servicio OPRF instala este y nunca toca el nucleo copyleft.
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.29", optional = true, features = ["extension-module", "abi3-py39"] }
curve25519-dalek = { version = "5", features = ["digest"] }
sha2 = "0.11"
getrandom = "0.2"
