[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "quipu-voprf"
dynamic = ["version"]
description = "VOPRF sobre ristretto255 con pruebas DLEQ: cliente del servicio Quipu OPRF"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Juan Carlos Isaza", email = "isazajuancarlos@gmail.com" }]
keywords = ["voprf", "oprf", "ristretto255", "dleq", "password", "cryptography"]
classifiers = [
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security :: Cryptography",
]

# Apache-2.0, NO la AGPL de `quipu-crypto`. Este paquete es lo unico que un
# cliente del servicio OPRF instala dentro de su servidor de autenticacion: con
# AGPL, el copyleft de red alcanzaria su SaaS y nadie lo instalaria. Ver
# LICENSING.md §0 en la raiz del repo.
license = "Apache-2.0"
# Ruta relativa a ESTE pyproject. Sin esto, maturin escribe `License-File: LICENSE`
# (solo el nombre) en el PKG-INFO, pero al empaquetar un miembro de workspace deja
# el archivo en crates/quipu-voprf/LICENSE. PyPI lo busca en la raiz del sdist, no
# lo encuentra y rechaza con 400. Le paso a la 0.2.0.
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/isazajuancarlos/quipu"

[tool.maturin]
# Solo las primitivas VOPRF. El nucleo AGPL no entra en esta rueda -- ese es el
# punto entero de que este crate exista por separado.
features = ["python"]
module-name = "quipu_voprf"
