[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quipu-oprf-django"
# 0.1.1: solo metadatos (clasificadores de PyPI). Hay que subir el número
# aunque el código no cambie — PyPI NO deja resubir una versión, y el job de
# publicación usa `skip-existing: true`, así que etiquetar sin subir versión
# no falla: no hace NADA en silencio.
version = "0.1.1"
description = "Endurecimiento de contraseñas con VOPRF para Django: una base de datos robada no se puede crackear offline."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Juan Carlos Isaza", email = "isazajuancarlos@gmail.com" }]
keywords = ["django", "password", "oprf", "voprf", "argon2", "authentication"]

# Sin clasificadores, quien filtra PyPI por «Framework :: Django» —que es
# exactamente cómo se busca un paquete de Django— no encuentra este. Las
# keywords no sustituyen a los clasificadores: la navegación por facetas de
# PyPI solo usa estos.
#
# NO se incluye «License :: OSI Approved :: Apache Software License»:
# PEP 639 sustituyó los clasificadores de licencia por expresiones SPDX, y
# setuptools RECHAZA la construcción si conviven con `license = "Apache-2.0"`.
# Existe en la lista de PyPI —lo comprobé— pero existir no es lo mismo que
# poder usarse aquí. Se descubrió construyendo el paquete, no leyendo la lista.
# Verificados uno a uno contra https://pypi.org/pypi?:action=list_classifiers
# el 2026-07-21: un clasificador inválido hace que PyPI rechace la subida
# ENTERA, y eso se descubriría en mitad de un release.
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

# Apache-2.0, NO la AGPL del núcleo. Este plugin vive dentro del servidor de auth
# del cliente: con AGPL, el copyleft de red alcanzaría su SaaS y nadie lo
# instalaría — lo contrario de lo que existe para hacer. Solo depende de las
# primitivas VOPRF (`crates/quipu-voprf`, Apache-2.0), nunca del núcleo AGPL:
# etiquetar el envoltorio no habría bastado, porque la licencia de un envoltorio
# no relicencia su dependencia. Ver LICENSING.md §0.
license = "Apache-2.0"

dependencies = [
  "django>=4.2",
  "argon2-cffi>=21.3",
  # Solo las primitivas VOPRF (Apache-2.0). NUNCA `quipu-crypto`, que es el
  # núcleo AGPL: este plugin vive dentro del servidor de auth del cliente y
  # arrastrarle copyleft de red ahí es justo lo que impide venderle el servicio.
  "quipu-voprf>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/isazajuancarlos/quipu"
Servicio = "https://oprf.xiliux.com"

[tool.setuptools]
packages = ["quipu_oprf_django"]
